Fixed 'back' bag, added 'show weather' functional